@@ -1,6 +1,8 @@
 
 CHANGES IN FLTK 1.3.1
 
+	- Fixed Fl_Input_::maximum_size() documentation and replace() method
+	  to honor maximum_size() as number of allowed characters (STR #2747).
 	- Fixed a potential crash if Fl_Double_Window::flush() was called
 	  before show()
 	- Fixed regression (in FLTK 1.3.0) that could clear a radio
